Out-of-view fixed position check should not be affected by page scale at all on Mac https://bugs.webkit.org/show_bug.cgi?id=110294 -and corresponding- <rdar://problem/13247582>

Reviewed by Simon Fraser.

Source/WebCore:

Don't scale the layerBounds. Generally, the layerBounds should be relative to the
viewBounds which are also unscaled. Chromium used to want this behavior, but it is
covered by their pageScaleFactorAppliedInCompositor implementation now.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresCompositingForPosition):

LayoutTests:

These layer results should be the same regardless of the scale factor.

* compositing/layer-creation/fixed-position-out-of-view-scaled-expected.txt:
* compositing/layer-creation/fixed-position-out-of-view-scaled-scroll-expected.txt:
* compositing/layer-creation/fixed-position-out-of-view-scaled-scroll.html:
* compositing/layer-creation/fixed-position-out-of-view-scaled.html:
* platform/chromium/compositing/layer-creation/fixed-position-out-of-view-scaled-expected.txt: Removed.
* platform/chromium/compositing/layer-creation/fixed-position-out-of-view-scaled-scroll-expected.txt: Removed.
* platform/mac-wk2/tiled-drawing/fixed/four-bars-zoomed-expected.txt:

Skip these on Chromium for now.
* platform/chromium/TestExpectations:



Canonical link: https://commits.webkit.org/128784@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143641 268f45cc-cd09-0410-ab3c-d52691b4dbfc